--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 trimesh==3.9.8
-numpy==1.19.2
+numpy==1.21.2
 pyhocon==0.3.57
 icecream==2.1.0
-opencv_python==4.5.2.52
+opencv_python==4.5.5.64
 tqdm==4.50.2
-torch==1.8.0
+torch==1.11.0
 scipy==1.7.0
 PyMCubes==0.1.2
+imageio=2.16.1
+scikit-image=0.19.2
